# sql-permutation

./: .gitignore  Cargo.toml  README.md
config/: log4rs.yml
config/tidb-docker-compose/: README.md  docker-compose.yml
config/tidb-docker-compose/config/: tidb.toml
src/: algo.rs  arg.rs  concurrent.rs  file.rs  lib.rs
