[package]
name = "sql_permutation"
version = "0.1.0"
authors = ["fortime <palfortime@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log4rs = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = "2.33"
tokio = { version = "0.2", features = ["macros", "sync", "fs", "io-util"] }
futures = "0.3"
futures-util = "0.3"
mysql_async = "0.24"
